2001-09-18  Bruno Haible  <haible@clisp.cons.org>

	* gprof.c (main): For gettext, also set the LC_CTYPE locate facet.
	* sym_ids.c: Include "safe-ctype.h" instead of <ctype.h>.
	(parse_spec): Use ISDIGIT instead of isdigit.

2001-09-18  Alan Modra  <amodra@bigpond.net.au>

	* sparc.c (sparc_find_call): Warning fix.
	* alpha.c (alpha_find_call): Likewise.

2001-08-09  Alan Modra  <amodra@bigpond.net.au>

	* alpha.c: Add missing prototypes.
	* sparc.c: Likewise.
	* tahoe.c: Likewise.
	* vax.c: Likewise.
	* i386.c: Likewise.
	(i386_iscall): Don't use DEFUN.

2001-07-19  Nick Clifton  <nickc@cambridge.redhat.com>

	* NOTES: Rename to README for consistency with other binutils.

2001-06-18  H.J. Lu <hjl@gnu.org>

        * Makefile.am (diststuff): Add $(MANS).
        (gprof.1): Remove the prefix `$(srcdir)/'.
        * Makefile.in: Regenerated.

        * gprof.1: Removed.

2001-06-12  Ben Elliston  <bje@redhat.com>

	* gprof.texi (File Format): Profile data files are stored in
	target byte order, not host byte order.

2001-05-16  Alexandre Oliva  <aoliva@redhat.com>

	* gmon_io.c (gmon_io_read, gmon_io_write_vma,
	gmon_io_write_32, gmon_io_write_8, gmon_io_write): Adjust
	argument list for K&R C.

2001-04-06  Stephane Carrez  <Stephane.Carrez@worldnet.fr>

	* gprof.texi: Put @c man begin and @c man end indications
	to generate man page using texi2pod and pod2man.  Added SEEALSO,
	SYNOPSIS, BUGS, FILES and DESCRIPTION from original gprof.1
	enclosed in @ifset man condition.
	* Makefile.am (MANCONF, TEXI2POD, POD2MAN): New variable.
	Generate gprof.1 from gprof.texi.
	* gprof.1: Generate from gprof.texi.
	* Makefile.in: Regenerate.

2001-03-13  David Mosberger  <davidm@hpl.hp.com>

	* hist.c (hist_dimension): Declare as an array of 16 characters.
	(hist_read_rec): If SAMPLEDEBUG, print each histogram bin count.

	* basic_blocks.c: Whitespace and formatting changes.
	* bb_exit_func.c: Ditto.
	* call_graph.c: Ditto.
	* call_graph.h: Ditto.
	* cg_arcs.c: Ditto.