@@ -1,3 +1,9 @@
+2001-10-02  Alan Modra  <amodra@bigpond.net.au>
+
+	* Makefile.am (Makefile): Depend on bfd/configure.in.
+	Run "make dep-am".
+	* Makefile.in: Regenerate.
+
 2001-09-18  Bruno Haible  <haible@clisp.cons.org>
 
 	* gprof.c (main): For gettext, also set the LC_CTYPE locate facet.
